--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
     text-align: center;
     background-color: rgb(34, 34, 34);
@@ -5,6 +10,7 @@ body{
 }
 
 .divcard {
+    width: 500px;
     color: rgb(0, 0, 0);
     background-color: rgba(255, 255, 255, 0.7);
     padding: 10px;
@@ -14,9 +20,13 @@ body{
     border-radius: 10px;
 }
 
+.divcard:hover {
+    background-color: rgba(255, 255, 255, 1);
+}
+
 .maindiv {
     background-color: rgb(255, 255, 255);
-    max-width: 800px;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
     background-image: url("img/791.jpg");
